<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Stream</string>
    <string name="action_settings">Settings</string>
	<string name="signin"> Sign In With Twitter</string>
	<string name="log_out"> Sign Out </string>
    <string name="action_search"> Search </string>
	<string name="hint"> Enter a Keyword  </string>
    <string name="stream_tag">Stream </string>
    <string name="speedup_tag">SpeedUpStream </string>
    <string name="slowdown_tag">SlowDownStream </string>
    <string name="mykeyword_tag">MyKeyWord </string>
    <string name="question_tag">FAQ </string>
    <string name="about_tag"> About </string>
    
    <string name="ok"> OK </string>
    
    <!-- FAQ Strings -->
    <string name="firstquestion"> ♣Why aren\'t images showing up? </string>
    <string name="firstanswer1">\t ♦Probably internet connection is lost </string>
	<string name="firsttip1">\t ♠Make sure you have a valid internet connection </string>
	<string name="firstanswer2">\t ♦You might be streaming too fast, while using a slow internet connection  </string>
	<string name="firsttip2">\t ♠Try to slow down streaming  </string>
	<string name="secondquestion">♣Why isn\'t it streaming? </string>
	<string name="secondanswer1">\t ♦You might have been continuously trying many streamings in a short amount of time </string>
	<string name="secondtip1"> \t ♠Try it again later </string>
	<string name="secondanswer2"> \t ♦Misleading keyword </string>
	<string name="secondtip2"> \t ♠Recheck your keyword using MyKeyWord button </string>
	<string name="thirdquestion">♣Why isn\'t the streaming speed changing?  </string>
	<string name="thirdanswer1">\t ♦You might have tried to change the streaming speed before starting to stream </string>
	<string name="thirdtip1">\t ♠Change the streaming speed after you have started streaming </string>
	<string name="tips">♣Useful info </string>
	<string name="tip1">\t ♦When the Search is fired, and the app crashes, you must have definitely lost internet connection  </string>
	<string name="tip2">\t ♠Sometimes there might be a small delay when pressing the Sign In With Twitter button  </string>
	  
	<!-- Welcome & About Strings -->
	<string name="intro2">\t ☆Entering a keyword and firing it will bring up top tweets\n </string>
	<string name="intro3">\t ☆Stream button will allow live tweets to flow each 2.5 seconds\n </string>
	<string name="intro4">\t ☆SpeedUpStream will increase streaming speed by 0.5 seconds. Maximum value is 1 second i.e tweets
	    will flow at most, each 1 second\n </string>
	<string name="intro5">\t ☆SlowDownStream will decrease streaming speed by 0.5 seconds. Minimum value is 5 seconds i.e tweets
	    will flow at least, each 5 seconds\n </string>    
	<string name="intro6">\t ☆MyKeyWord will display your recent entered keyword\n </string>
	<string name="about2">\t ☆For any question, issue or suggestion feel free to mail me at: </string>
	<string name="about3">\t\t\t\t bossbledi@gmail.com \n</string>
	<string name="about4">\t ☆Developed by: </string>
	<string name="about5"> \t\t\t\t Shkelqim Memolla \n</string>
	<string name="about6">\t ☆Version: 1.0 </string>
</resources>
